# Simulator

./: .codex_tmp_reflect.cs  .gitattributes  CommonSetting.json  Directory.Build.props  MIGRATION_STATUS.md  README.md  RMUC2026_MAP.terraincache.lz4  SIMULATOR_README.md  Simulator.sln  appearance_editor.py  config.json  imgui.ini  open_csharp_project.py  pygame_compat.py  run_viewer.py  settings.json  simulator_3d.py  start_3d_simulator.bat  start_decision_deployment.bat  terrain_editor.py
Engine/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
appearance_presets/: latest_appearance.json
artifacts/: rmuc2026-map-current-before-map-revert.json
control/: controller.py  player_look.py
core/: config_manager.py  game_engine.py  message_bus.py
cpp/: CMakeLists.txt  README.md
cpp/.tmp_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  rm26_native.sln  rm26_native.vcxproj  rm26_native.vcxproj.filters
cpp/.tmp_build/Release/: rm26_native.cp312-win_amd64.pyd  rm26_native.exp  rm26_native.lib
cpp/.tmp_build/rm26_native.dir/Release/: rm26_native.cp312-win_amd64.pyd.recipe
cpp/.tmp_build/rm26_native.dir/Release/rm26_native.tlog/: CL.13480.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cpp/.tmp_build/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
cpp/.tmp_build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
cpp/.tmp_build/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
cpp/.tmp_build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cpp/src/: module.cpp
docs/: README.md  documentation-workflow.md  map-system-isolation.md  project-log.md
entities/: entity.py  entity_manager.py
map/: map_manager.py
map_presets/: basicMap.function_heading_map.npy  basicMap.function_pass_map.npy  basicMap.height_map.npy  basicMap.json  basicMap.movement_block_map.npy  basicMap.priority_map.npy  basicMap.terrain_type_map.npy  basicMap.vision_block_height_map.npy  basicMap.vision_block_map.npy
perf_logs/: perf_stats.csv
physics/: physics_engine.py
py_client/: appearance_editor.py  pygame_compat.py  terrain_editor.py
rendering/: native_cpp_scene_backend.py  renderer.py  renderer_sidebar_mixin.py  terrain_overview_mixin.py  terrain_scene_backends.py
robot_venue_map_asset/: build_execution_report.md  build_validation_report.json  venue_map.glb  venue_map_moderngl_data.npz  venue_map_pybullet.mtl  venue_map_ursina.glb
rules/: combat_rules.py  (+3 more)
(+350 files in other folders)
